# compress

./: README.md  action.yml  pyproject.toml
.github/workflows/: test.yml
prepare_compress/: main.py  zip.py
tests/: test_main.py
